# pulse-chat

./: .env.example  docker-compose.yml
docs/: prometheus-grafana.md
infra/: prometheus.yml
services/auth/: Dockerfile  database.py  lifespan.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  security.py
services/auth/routers/: auth.py  users.py
services/chat/: database.py  main.py  models.py  requirements.txt  schemas.py
services/notify/: main.py  requirements.txt
