[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.138.0",
    "passlib[bcrypt]>=1.7.4",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "python-jose[cryptography]>=3.5.0",
    "sentry-sdk>=2.63.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
